--- a/Matreshka/MainWindow.xaml
+++ b/Matreshka/MainWindow.xaml
@@ -60,8 +60,220 @@
                         <DatePicker SelectedDate="{Binding BirthDate}" DisplayDateStart="1/01/1995" Margin="10,0,0,0"></DatePicker>
                     </StackPanel>
 
-                    <Expander Header="Персональные данные" DataContext="{Binding PersonalData}" ContentTemplate="{StaticResource PersonalDataTemplate}"/>
-                    <Expander Header="Пожелания" DataContext="{Binding Desires}" ContentTemplate="{StaticResource PersonalWishesTemplate}"/>
+                    <Expander Header="Персональные данные" DataContext="{Binding PersonalData}">
+                        <StackPanel>
+                            <StackPanel Orientation="Horizontal" Margin="5">
+                                <TextBlock MinWidth="120">Национальность</TextBlock>
+                                <TextBox Text="{Binding Nationality}" Margin="10,0,0,0" MinWidth="120"></TextBox>
+                            </StackPanel>
+                            <StackPanel Orientation="Horizontal" Margin="5">
+                                <TextBlock MinWidth="120">Цвет глаз</TextBlock>
+                                <TextBox Text="{Binding EyeColor}" Margin="10,0,0,0" MinWidth="120"></TextBox>
+                            </StackPanel>
+                            <StackPanel Orientation="Horizontal" Margin="5">
+                                <TextBlock MinWidth="120">Цвет волос</TextBlock>
+                                <TextBox Text="{Binding HairColor}" Margin="10,0,0,0" MinWidth="120"></TextBox>
+                            </StackPanel>
+                            <StackPanel Orientation="Horizontal" Margin="5">
+                                <TextBlock MinWidth="120">Рост</TextBlock>
+                                <TextBox Text="{Binding Growth}" Margin="10,0,0,0" MinWidth="120"></TextBox>
+                            </StackPanel>
+                            <StackPanel Orientation="Horizontal" Margin="5">
+                                <TextBlock MinWidth="120">Вес</TextBlock>
+                                <TextBox Text="{Binding Weight}" Margin="10,0,0,0" MinWidth="120"></TextBox>
+                            </StackPanel>
+                            <StackPanel Orientation="Horizontal" Margin="5">
+                                <TextBlock MinWidth="120">Вредные привычки</TextBlock>
+                                <ComboBox ItemsSource="{x:Static views:MainView.VarBools}" SelectedItem="{Binding BadHabbits}" Margin="10,0,0,0">
+                                    <ComboBox.ItemTemplate>
+                                        <DataTemplate>
+                                            <TextBlock Text="{Binding Converter={x:Static local:DescriptionConverter.Instance}}"></TextBlock>
+                                        </DataTemplate>
+                                    </ComboBox.ItemTemplate>
+                                </ComboBox>
+                            </StackPanel>
+                            <StackPanel Orientation="Horizontal" Margin="5">
+                                <TextBlock MinWidth="120">Любовь к детям</TextBlock>
+                                <ComboBox ItemsSource="{x:Static views:MainView.VarBools}" SelectedItem="{Binding LoveChildren}" Margin="10,0,0,0">
+                                    <ComboBox.ItemTemplate>
+                                        <DataTemplate>
+                                            <TextBlock Text="{Binding Converter={x:Static local:DescriptionConverter.Instance}}"></TextBlock>
+                                        </DataTemplate>
+                                    </ComboBox.ItemTemplate>
+                                </ComboBox>
+                            </StackPanel>
+                            <StackPanel Orientation="Horizontal" Margin="5">
+                                <TextBlock MinWidth="120">Юмор</TextBlock>
+                                <ComboBox ItemsSource="{x:Static views:MainView.VarBools}" SelectedItem="{Binding Humor}" Margin="10,0,0,0">
+                                    <ComboBox.ItemTemplate>
+                                        <DataTemplate>
+                                            <TextBlock Text="{Binding Converter={x:Static local:DescriptionConverter.Instance}}"></TextBlock>
+                                        </DataTemplate>
+                                    </ComboBox.ItemTemplate>
+                                </ComboBox>
+                            </StackPanel>
+                            <StackPanel Orientation="Horizontal" Margin="5">
+                                <TextBlock MinWidth="120">Доброта</TextBlock>
+                                <ComboBox ItemsSource="{x:Static views:MainView.VarBools}" SelectedItem="{Binding Kindness}" Margin="10,0,0,0">
+                                    <ComboBox.ItemTemplate>
+                                        <DataTemplate>
+                                            <TextBlock Text="{Binding Converter={x:Static local:DescriptionConverter.Instance}}"></TextBlock>
+                                        </DataTemplate>
+                                    </ComboBox.ItemTemplate>
+                                </ComboBox>
+                            </StackPanel>
+
+                            <StackPanel Orientation="Horizontal" Margin="5">
+                                <TextBlock MinWidth="120">Умение готовить</TextBlock>
+                                <ComboBox ItemsSource="{x:Static views:MainView.VarBools}" SelectedItem="{Binding Cookery}" Margin="10,0,0,0">
+                                    <ComboBox.ItemTemplate>
+                                        <DataTemplate>
+                                            <TextBlock Text="{Binding Converter={x:Static local:DescriptionConverter.Instance}}"></TextBlock>
+                                        </DataTemplate>
+                                    </ComboBox.ItemTemplate>
+                                </ComboBox>
+                            </StackPanel>
+                            <StackPanel Orientation="Horizontal" Margin="5">
+                                <TextBlock MinWidth="120">Ревность</TextBlock>
+                                <ComboBox ItemsSource="{x:Static views:MainView.VarBools}" SelectedItem="{Binding Jealousy}" Margin="10,0,0,0">
+                                    <ComboBox.ItemTemplate>
+                                        <DataTemplate>
+                                            <TextBlock Text="{Binding Converter={x:Static local:DescriptionConverter.Instance}}"></TextBlock>
+                                        </DataTemplate>
+                                    </ComboBox.ItemTemplate>
+                                </ComboBox>
+                            </StackPanel>
+                            <StackPanel Orientation="Horizontal" Margin="5">
+                                <TextBlock MinWidth="120">Наличие машины</TextBlock>
+                                <ComboBox ItemsSource="{x:Static views:MainView.VarBools}" SelectedItem="{Binding HaveCar}" Margin="10,0,0,0">
+                                    <ComboBox.ItemTemplate>
+                                        <DataTemplate>
+                                            <TextBlock Text="{Binding Converter={x:Static local:DescriptionConverter.Instance}}"></TextBlock>
+                                        </DataTemplate>
+                                    </ComboBox.ItemTemplate>
+                                </ComboBox>
+                            </StackPanel>
+                            <StackPanel Orientation="Horizontal" Margin="5">
+                                <TextBlock MinWidth="120">Постоянный доход</TextBlock>
+                                <ComboBox ItemsSource="{x:Static views:MainView.VarBools}" SelectedItem="{Binding FixedIncome}" Margin="10,0,0,0">
+                                    <ComboBox.ItemTemplate>
+                                        <DataTemplate>
+                                            <TextBlock Text="{Binding Converter={x:Static local:DescriptionConverter.Instance}}"></TextBlock>
+                                        </DataTemplate>
+                                    </ComboBox.ItemTemplate>
+                                </ComboBox>
+                            </StackPanel>
+                            <StackPanel Orientation="Horizontal" Margin="5">
+                                <TextBlock MinWidth="120">Романтик</TextBlock>
+                                <ComboBox ItemsSource="{x:Static views:MainView.VarBools}" SelectedItem="{Binding Romance}" Margin="10,0,0,0">
+                                    <ComboBox.ItemTemplate>
+                                        <DataTemplate>
+                                            <TextBlock Text="{Binding Converter={x:Static local:DescriptionConverter.Instance}}"></TextBlock>
+                                        </DataTemplate>
+                                    </ComboBox.ItemTemplate>
+                                </ComboBox>
+                            </StackPanel>
+                        </StackPanel>
+                    </Expander>
+                    <Expander Header="Пожелания" DataContext="{Binding Desires}">
+                        <StackPanel>
+                            <StackPanel Orientation="Horizontal" Margin="5">
+                                <TextBlock MinWidth="120">Любимый цвет глаз</TextBlock>
+                                <TextBox Text="{Binding EyeColor}" Margin="10,0,0,0" MinWidth="120"></TextBox>
+                            </StackPanel>
+                            <StackPanel Orientation="Horizontal" Margin="5">
+                                <TextBlock MinWidth="120">Вредные привычки</TextBlock>
+                                <ComboBox ItemsSource="{x:Static views:MainView.VarBools}" SelectedItem="{Binding BadHabbits}" Margin="10,0,0,0">
+                                    <ComboBox.ItemTemplate>
+                                        <DataTemplate>
+                                            <TextBlock Text="{Binding Converter={x:Static local:DescriptionConverter.Instance}}"></TextBlock>
+                                        </DataTemplate>
+                                    </ComboBox.ItemTemplate>
+                                </ComboBox>
+                            </StackPanel>
+                            <StackPanel Orientation="Horizontal" Margin="5">
+                                <TextBlock MinWidth="120">Любовь к детям</TextBlock>
+                                <ComboBox ItemsSource="{x:Static views:MainView.VarBools}" SelectedItem="{Binding LoveChildren}" Margin="10,0,0,0">
+                                    <ComboBox.ItemTemplate>
+                                        <DataTemplate>
+                                            <TextBlock Text="{Binding Converter={x:Static local:DescriptionConverter.Instance}}"></TextBlock>
+                                        </DataTemplate>
+                                    </ComboBox.ItemTemplate>
+                                </ComboBox>
+                            </StackPanel>
+                            <StackPanel Orientation="Horizontal" Margin="5">
+                                <TextBlock MinWidth="120">Юмор</TextBlock>
+                                <ComboBox ItemsSource="{x:Static views:MainView.VarBools}" SelectedItem="{Binding Humor}" Margin="10,0,0,0">
+                                    <ComboBox.ItemTemplate>
+                                        <DataTemplate>
+                                            <TextBlock Text="{Binding Converter={x:Static local:DescriptionConverter.Instance}}"></TextBlock>
+                                        </DataTemplate>
+                                    </ComboBox.ItemTemplate>
+                                </ComboBox>
+                            </StackPanel>
+                            <StackPanel Orientation="Horizontal" Margin="5">
+                                <TextBlock MinWidth="120">Доброта</TextBlock>
+                                <ComboBox ItemsSource="{x:Static views:MainView.VarBools}" SelectedItem="{Binding Kindness}" Margin="10,0,0,0">
+                                    <ComboBox.ItemTemplate>
+                                        <DataTemplate>
+                                            <TextBlock Text="{Binding Converter={x:Static local:DescriptionConverter.Instance}}"></TextBlock>
+                                        </DataTemplate>
+                                    </ComboBox.ItemTemplate>
+                                </ComboBox>
+                            </StackPanel>
+
+                            <StackPanel Orientation="Horizontal" Margin="5">
+                                <TextBlock MinWidth="120">Умение готовить</TextBlock>
+                                <ComboBox ItemsSource="{x:Static views:MainView.VarBools}" SelectedItem="{Binding Cookery}" Margin="10,0,0,0">
+                                    <ComboBox.ItemTemplate>
+                                        <DataTemplate>
+                                            <TextBlock Text="{Binding Converter={x:Static local:DescriptionConverter.Instance}}"></TextBlock>
+                                        </DataTemplate>
+                                    </ComboBox.ItemTemplate>
+                                </ComboBox>
+                            </StackPanel>
+                            <StackPanel Orientation="Horizontal" Margin="5">
+                                <TextBlock MinWidth="120">Ревность</TextBlock>
+                                <ComboBox ItemsSource="{x:Static views:MainView.VarBools}" SelectedItem="{Binding Jealousy}" Margin="10,0,0,0">
+                                    <ComboBox.ItemTemplate>
+                                        <DataTemplate>
+                                            <TextBlock Text="{Binding Converter={x:Static local:DescriptionConverter.Instance}}"></TextBlock>
+                                        </DataTemplate>
+                                    </ComboBox.ItemTemplate>
+                                </ComboBox>
+                            </StackPanel>
+                            <StackPanel Orientation="Horizontal" Margin="5">
+                                <TextBlock MinWidth="120">Наличие машины</TextBlock>
+                                <ComboBox ItemsSource="{x:Static views:MainView.VarBools}" SelectedItem="{Binding HaveCar}" Margin="10,0,0,0">
+                                    <ComboBox.ItemTemplate>
+                                        <DataTemplate>
+                                            <TextBlock Text="{Binding Converter={x:Static local:DescriptionConverter.Instance}}"></TextBlock>
+                                        </DataTemplate>
+                                    </ComboBox.ItemTemplate>
+                                </ComboBox>
+                            </StackPanel>
+                            <StackPanel Orientation="Horizontal" Margin="5">
+                                <TextBlock MinWidth="120">Постоянный доход</TextBlock>
+                                <ComboBox ItemsSource="{x:Static views:MainView.VarBools}" SelectedItem="{Binding FixedIncome}" Margin="10,0,0,0">
+                                    <ComboBox.ItemTemplate>
+                                        <DataTemplate>
+                                            <TextBlock Text="{Binding Converter={x:Static local:DescriptionConverter.Instance}}"></TextBlock>
+                                        </DataTemplate>
+                                    </ComboBox.ItemTemplate>
+                                </ComboBox>
+                            </StackPanel>
+                            <StackPanel Orientation="Horizontal" Margin="5">
+                                <TextBlock MinWidth="120">Романтик</TextBlock>
+                                <ComboBox ItemsSource="{x:Static views:MainView.VarBools}" SelectedItem="{Binding Romance}" Margin="10,0,0,0">
+                                    <ComboBox.ItemTemplate>
+                                        <DataTemplate>
+                                            <TextBlock Text="{Binding Converter={x:Static local:DescriptionConverter.Instance}}"></TextBlock>
+                                        </DataTemplate>
+                                    </ComboBox.ItemTemplate>
+                                </ComboBox>
+                            </StackPanel>
+                        </StackPanel>
+                    </Expander>
                     <Expander Header="Кандидаты">
                         <StackPanel>
                         <ListBox MinHeight="50" MaxHeight="100" 
